--- a/src/app/modules/account/components/info-perusahaan-address-card/info-perusahaan-address-card.component.html
+++ b/src/app/modules/account/components/info-perusahaan-address-card/info-perusahaan-address-card.component.html
@@ -19,7 +19,7 @@
 	<div class="d-flex">
 		<trash-can></trash-can>
 		<wsh wide="16px"></wsh>
-		<edit></edit>
+		<edit (click)="edit()"></edit>
 		<wsh wide="16px"></wsh>
 		<set-utama-button [utama]="utama"></set-utama-button>
 	</div>
