--- a/src/app/modules/account/pages/account-info-perusahaan/account-info-perusahaan.component.html
+++ b/src/app/modules/account/pages/account-info-perusahaan/account-info-perusahaan.component.html
@@ -15,5 +15,6 @@
 </div>
 <wsv wide="24px"></wsv>
 <div *ngFor="let address of addresses">
-	<info-perusahaan-address-card [address]="address"></info-perusahaan-address-card>
+	<info-perusahaan-address-card [address]="address"
+		(editEvent)="editAddress(address)"></info-perusahaan-address-card>
 </div>
