--- a/src/app/modules/account/components-info-perusahaan/label-input/label-input.component.html
+++ b/src/app/modules/account/components-info-perusahaan/label-input/label-input.component.html
@@ -1,1 +1,1 @@
-<div id="label-input-address">{{label}}<span>*</span></div>
+<div id="label-input-address">{{label}}<span *ngIf="!harusDiisi">*</span></div>
