--- a/src/app/layout/components/header/header.component.html
+++ b/src/app/layout/components/header/header.component.html
@@ -130,7 +130,7 @@
 			<div id="headers-user-menu"
 				(click)="goToAccount()">
 				<img id="headers-user-photo"
-					src="../../../../assets/image/icons/pp.jpg">
+					src="{{datauser?.profile_picture_url}}">
 			</div>
 
 		</div>
