--- a/src/app/modules/account/pages/account-layout/account-layout.component.html
+++ b/src/app/modules/account/pages/account-layout/account-layout.component.html
@@ -4,16 +4,16 @@
 		<wsv wide="24px"></wsv>
 		<div class="d-flex justify-content-center">
 			<img id="logo-akun"
-				src="../../../../../assets/image/icons/logo-manager.png">
+				src="{{datauser?.profile_picture_url}}">
 		</div>
 
 		<wsv wide="18px"></wsv>
 		<div class="d-flex justify-content-center">
-			<div id="position-label">Manager</div>
+			<div id="position-label">{{datauser?.role_name}}</div>
 		</div>
 		<wsv wide="18px"></wsv>
 		<div class="d-flex justify-content-center">
-			<div id="name-label">Abdurahman Pamungkas</div>
+			<div id="name-label">{{datauser?.fullname}}</div>
 		</div>
 		<wsv wide="39px"></wsv>
 		<div class="d-flex">
