--- a/src/app/modules/account/components-kelola-purchaser/delete-purchaser-confirmation-dialog/delete-purchaser-confirmation-dialog.component.html
+++ b/src/app/modules/account/components-kelola-purchaser/delete-purchaser-confirmation-dialog/delete-purchaser-confirmation-dialog.component.html
@@ -1,5 +1,5 @@
 <div id="popup-wording">
-	<p>Anda yakin ingin menghapus akun Nana Charisma</p>
+	<p>Anda yakin ingin menghapus akun {{user.fullname}}</p>
 </div>
 <div id="popup-option">
 	<div id="popup-option-button">
@@ -11,7 +11,7 @@
 	<div id="popup-option-button">
 		<div align="center">
 			<div class="divbutton-right"
-				(click)="lihatTransaksi()">Ya</div>
+				(click)="hapus()">Ya</div>
 		</div>
 	</div>
 </div>
