--- a/src/app/modules/account/components-kelola-purchaser/purchaser-card/purchaser-card.component.html
+++ b/src/app/modules/account/components-kelola-purchaser/purchaser-card/purchaser-card.component.html
@@ -1,31 +1,3 @@
-<!-- <div id="container-inside-1"></div>
-	<div class="wrapper-card d-flex justify-content-between align-items-center">
-
-		<img id="logo-purchaser"
-			src="../../../../../assets/image/icons/purchaser-logo.png">
-
-
-
-
-		<div>
-			<div class="label-1">Nana Charisma</div>
-			<div class="label-2">nana.charisma@narindo.com</div>
-		</div>
-	</div>
-
-	<div class="wrapper-card-2 d-flex justify-content-between align-items-center">
-
-		<img id="logo-purchaser"
-			src="../../../../../assets/image/icons/purchaser-logo.png">
-
-		<div>
-			<div class="label-1">Nana Charisma</div>
-			<div class="label-2">nana.charisma@narindo.com</div>
-		</div>
-	</div>
-
-</div> -->
-
 <div class="wrapper-card-2 d-flex justify-content-between align-items-center">
 	<div id="container-inside">
 		<img class="logo-purchaser"
@@ -39,7 +11,7 @@
 	</div>
 
 	<div id="wrapper-right">
-		<div class="label-1">Nana Charisma</div>
-		<div class="label-2">nana.charisma@narindo.com</div>
+		<div class="label-1">{{user.fullname}}</div>
+		<div class="label-2">{{user.email}}</div>
 	</div>
 </div>
