--- a/src/app/modules/account/pages/account-kelola-purchaser/account-kelola-purchaser.component.html
+++ b/src/app/modules/account/pages/account-kelola-purchaser/account-kelola-purchaser.component.html
@@ -6,7 +6,14 @@
 	<add-button (click)="addPurchaser()"></add-button>
 </div>
 <div *ngIf="showAddPurchaserEditor">
-	<add-purchaser-editor></add-purchaser-editor>
+	<add-purchaser-editor (addEvent)="onAddUserEvent()"></add-purchaser-editor>
 </div>
 <wsv wide="24px"></wsv>
-<purchaser-list></purchaser-list>
+
+<div class="card-group">
+	<div *ngFor="let user of users">
+		<purchaser-card [user]="user"
+			(deleteEvent)="onDeleteEvent()"></purchaser-card>
+	</div>
+
+</div>
