--- a/src/app/modules/request-approval/components/item-list/item-list.component.scss
+++ b/src/app/modules/request-approval/components/item-list/item-list.component.scss
@@ -5,11 +5,17 @@
 	background: $putih-tok;
 	border-radius: 8px;
 	width: 703px;
-  padding: 14px;
-  margin-top: -5%;
+  padding: 14px 14px 0px;
+  margin-top: -7.5%;
   z-index: 999;
 }
+#main-wrapper {
+	position: relative;
+}
 
+.left-margin{
+  margin-left: -37%;
+}
 .grey-rounded-corner-header-card{
   background: #EEEEEE;
   border-radius: 10px;
@@ -24,16 +30,23 @@
 	font-size: 12px;
 	color: $abu-abu-gelap;
 }
-
+.text-container {
+	width: 152px;
+}
 .text-header-card{
   line-height: 10px;
+  padding-left: 0px;
+  margin-top: -1%;
 }
 
 .text-header-card-2{
+  line-height: 10px;
   text-align: right;
+  margin-top: -1%;
 }
 
 .title-text-header-card{
+font-family: $primary-font;
 font-size: 14px;
 font-style: normal;
 font-weight: 700;
@@ -44,21 +57,19 @@ color: #606060;
 }
 
 .title-text-header-card-2{
-  font-size: 14px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 18px;
-  letter-spacing: 0em;
-  text-align: left;
-  color: #606060;
+	font-family: $primary-font;
+	font-style: normal;
+	font-weight: 600;
+	font-size: 14px;
+	line-height: 16px;
+  color: #a9a9a9;
 }
 
 .sub-text-header-card{
-  font-size: 14px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: 18px;
-  letter-spacing: 0em;
-  text-align: left;
-  color: #606060;
+	font-family: $primary-font;
+	font-style: normal;
+	font-weight: 600;
+	font-size: 14px;
+	line-height: 18px;
+	color: #606060;
 }
