--- a/src/app/modules/account/components/info-personal-row/info-personal-row.component.html
+++ b/src/app/modules/account/components/info-personal-row/info-personal-row.component.html
@@ -6,7 +6,7 @@
 		type="text"
 		id="input-text-personal-row"
 		[(ngModel)]="content"
-		class="textbox-search">ss
+		class="textbox-search">
 </div>
 <wsv wide="18px"></wsv>
 <div *ngIf="isEditting"
