--- a/src/app/modules/account/components-kredit-perusahaan/kredit-table/kredit-table.component.scss
+++ b/src/app/modules/account/components-kredit-perusahaan/kredit-table/kredit-table.component.scss
@@ -14,3 +14,20 @@ table {
 	font-size: 14px;
 	line-height: 16px;
 }
+
+
+.text-center{
+	text-align:center;
+}
+
+.text-right{
+	text-align:right;
+}
+
+.text-left{
+	text-align:left;
+}
+
+.tebal{
+	font-weight: bold;
+}
