--- a/src/app/layout/components/header/header.component.scss
+++ b/src/app/layout/components/header/header.component.scss
@@ -177,6 +177,7 @@
 	float:left;width:100%;
 	height: 1px;
 	background-color: $putih-tok;
+	opacity: 0.6;
 	// border:solid rgb(35, 117, 240) 1px;
 }
 
