hide warna dan berat

--- a/src/app/shared/components/item-desc/item-desc.component.html
+++ b/src/app/shared/components/item-desc/item-desc.component.html
@@ -7,11 +7,11 @@
 </div>
 <wsv wide="6px"></wsv>
 <div class="d-flex align-items-center">
-	<div class="item-spec-label">Warna</div>
+	<!-- <div class="item-spec-label">Warna</div>
 	<wsh wide="8px"></wsh>
 	<div id="rounded-item-color"
 		style="background-color: #606060"></div>
 	<wsh wide="16px"></wsh>
 
-	<div class="item-spec-label">Berat: 2.400 gr.</div>
+	<div class="item-spec-label">Berat: 2.400 gr.</div> -->
 </div>
