bold kredit tersedia

--- a/src/app/shared/components/box-cart-price/box-cart-price.component.scss
+++ b/src/app/shared/components/box-cart-price/box-cart-price.component.scss
@@ -56,6 +56,7 @@
 	font-weight: normal;
 	font-size: 14px;
 	line-height: 100%;
+	font-weight: bold;
 	font-feature-settings: 'kern' off;
 	color: $abu-abu-gelap;
 }
