--- a/src/app/shared/components/box-cart-price/box-cart-price.component.html
+++ b/src/app/shared/components/box-cart-price/box-cart-price.component.html
@@ -2,17 +2,17 @@
 	class="d-flex align-items-center justify-content-between">
 	<div class="font2">Kredit Tersedia</div>
 	<div class="d-flex justify-content-between harga-per-item">
-		<div class="font1"></div>
+		<div class="font1">Rp</div>
 		<!-- <div class="font1">{{pertotalan.saldo|rupiah}}</div> -->
-		<div class="font1">Rp. {{datacompany?.credit_rp | number}}</div>
+		<div class="font1">{{datacompany?.credit_rp | rupiah:'no-rp'}}</div>
 	</div>
 </div>
 <div id="div-price-below">
 	<div class="d-flex justify-content-between">
 		<div class="font1">Total Belanja</div>
 		<div class="d-flex justify-content-between harga-per-item">
-			<div class="font1"></div>
-			<div class="font1">{{pertotalan.totalPrice|rupiah}}</div>
+			<div class="font1">Rp</div>
+			<div class="font1">{{pertotalan.totalPrice| rupiah:'no-rp'}}</div>
 		</div>
 
 	</div>
@@ -23,8 +23,8 @@
 		<div class="font1">Fee</div>
 
 		<div class="d-flex justify-content-between harga-per-item">
-			<div class="font1"></div>
-			<div class="font1">{{pertotalan.totalFee|rupiah}}</div>
+			<div class="font1">Rp</div>
+			<div class="font1">{{pertotalan.totalFee| rupiah:'no-rp'}}</div>
 		</div>
 	</div>
 
@@ -35,8 +35,8 @@
 	<div class="d-flex justify-content-between">
 		<div class="font2">Sub Total</div>
 		<div class="d-flex justify-content-between harga-per-item">
-			<div class="font2"></div>
-			<div class="font2">{{pertotalan.subtotal|rupiah}}</div>
+			<div class="font2">Rp</div>
+			<div class="font2">{{pertotalan.subtotal| rupiah:'no-rp'}}</div>
 		</div>
 	</div>
 
@@ -46,8 +46,8 @@
 		<div class="font1">PPN</div>
 
 		<div class="d-flex justify-content-between harga-per-item">
-			<div class="font1"></div>
-			<div class="font1">{{pertotalan.ppn|rupiah}}</div>
+			<div class="font1">Rp</div>
+			<div class="font1">{{pertotalan.ppn| rupiah:'no-rp'}}</div>
 		</div>
 	</div>
 
@@ -57,8 +57,8 @@
 		<div class="font1">PPh 23</div>
 
 		<div class="d-flex justify-content-between harga-per-item">
-			<div class="font1"></div>
-			<div class="font1">{{pertotalan.ppn3|rupiah}}</div>
+			<div class="font1">Rp</div>
+			<div class="font1">{{pertotalan.ppn3| rupiah:'no-rp'}}</div>
 		</div>
 	</div>
 
@@ -68,8 +68,8 @@
 		<div class="font1">Total Ongkos Kirim</div>
 
 		<div class="d-flex justify-content-between harga-per-item">
-			<div class="font1"></div>
-			<div class="font1">{{pertotalan.ongkir|rupiah}}</div>
+			<div class="font1">Rp</div>
+			<div class="font1">{{pertotalan.ongkir| rupiah:'no-rp'}}</div>
 		</div>
 	</div>
 
@@ -82,8 +82,8 @@
 		<div id="label-ringkasan">Grand Total</div>
 
 		<div class="d-flex justify-content-between harga-per-item">
-			<div id="label-ringkasan"></div>
-			<div id="label-ringkasan">{{pertotalan.grandtotal|rupiah}}</div>
+			<div id="label-ringkasan">Rp</div>
+			<div id="label-ringkasan">{{pertotalan.grandtotal| rupiah:'no-rp'}}</div>
 		</div>
 	</div>
 
