dialog approval at home

--- a/src/app/modules/home/components/dialog-waiting-approval/dialog-waiting-approval.component.html
+++ b/src/app/modules/home/components/dialog-waiting-approval/dialog-waiting-approval.component.html
@@ -1,5 +1,9 @@
-<wsv wide="10px"></wsv>
+<div class="d-flex w-100 justify-content-end align-items-center">
 
+	<img id="close-dialog-button"
+		(click)="close()"
+		src="../../../../../assets/image/icons/ic-x.png">
+</div>
 
 <div id="popup-wording">
 	<p>{{nApproval}} Barang Menunggu Konfirmasi Approval Anda</p>
@@ -7,6 +11,12 @@
 <wsv wide="25px"></wsv>
 <div id="popup-option"
 	class="d-flex justify-content-center">
-	<div id="ok-button"
-		(click)="ok()">Approval</div>
+	<red-button label="Approval"
+		font="14px"
+		paddingtop="10px"
+		paddingbottom="13px"
+		paddingleft="0px"
+		paddingright="0px"
+		(click)="ok()"
+		float="right"></red-button>
 </div>
