--- a/src/app/shared/components/discount-harga-coret/discount-harga-coret.component.html
+++ b/src/app/shared/components/discount-harga-coret/discount-harga-coret.component.html
@@ -1,7 +1,7 @@
 <div class="d-flex justify-content-start">
 
 	<span *ngIf="discount_percent"
-		id="percent-label">10%</span>
+		id="percent-label">{{discount_percent}}%</span>
 	<wsh *ngIf="discount_percent"
 		wide="11px"></wsh>
 	<span id="harga-coret"
