--- a/src/app/shared/components/catalog-card-button/catalog-card-button.component.html
+++ b/src/app/shared/components/catalog-card-button/catalog-card-button.component.html
@@ -46,6 +46,7 @@
 			<div class="d-flex align-items-center">
 				<img src="https://id.360buyimg.com/Indonesia/s880x0_/nHBfsgAAJAAAAB0AD6waZQACy0M.jpg.dpg.webp"
 					id="notif-img">
+				<wsh wide="5px"></wsh>
 				<div>
 					<div id="item-name">Sweater Merah Pria</div>
 					<div>2 Barang (300gr)</div>
