--- a/src/app/shared/components/discount-harga-coret/discount-harga-coret.component.html
+++ b/src/app/shared/components/discount-harga-coret/discount-harga-coret.component.html
@@ -4,7 +4,8 @@
 		id="percent-label">{{discount_percent}}%</span>
 	<wsh *ngIf="discount_percent"
 		wide="11px"></wsh>
-	<span id="harga-coret"
+	<span *ngIf="discount_percent"
+		id="harga-coret"
 		class="align-self-center">{{original_price|rupiah}}</span>
 </div>
 
