--- a/src/app/modules/request-approval/components/request-approval-address/request-approval-address.component.html
+++ b/src/app/modules/request-approval/components/request-approval-address/request-approval-address.component.html
@@ -1,4 +1,5 @@
 <div id="request-approval">
+	<div class="rap-row"><b>{{fullname}}</b></div>
 	<div class="rap-row"><b>{{username}}</b></div>
 	<div class="rap-row">{{address}}</div>
 	<div class="rap-row">{{province}}</div>
