icon email in product-detail

--- a/src/app/modules/detail-product/components/floating-footer/floating-footer.component.scss
+++ b/src/app/modules/detail-product/components/floating-footer/floating-footer.component.scss
@@ -2,11 +2,13 @@
 @import '../../../../../styles/variables/fonts';
 
 #float-foot {
+	background: $color-primary;
+	box-shadow: 10px 0px 30px rgba(0, 0, 0, 0.1);
+}
+#outer-wrapper {
 	position: fixed;
 	bottom: 0%;
 	width: 100%;
-	background: $color-primary;
-	box-shadow: 10px 0px 30px rgba(0, 0, 0, 0.1);
 }
 
 #float-foot-wrapper {
