--- a/src/app/modules/request-approval/pages/request-approval-layout/request-approval-layout.component.html
+++ b/src/app/modules/request-approval/pages/request-approval-layout/request-approval-layout.component.html
@@ -23,7 +23,7 @@
 				<box-cart-price [pertotalan]="pertotalan"
 					[selectedItems]="selectedItems"
 					[buttonDisable]="false"
-					buttonLabel="Request Approval"
+					buttonLabel="Selanjutnya"
 					(buttonBoxCartPriceClick)="selanjutnyaClick()"></box-cart-price>
 			</div>
 
