--- a/src/app/modules/request-approval/components/item-list/item-list.component.html
+++ b/src/app/modules/request-approval/components/item-list/item-list.component.html
@@ -1,27 +1,27 @@
 <div id="main-wrapper"
-  *ngFor="let item of items">
-  <div class="grey-rounded-corner-header-card">
-    <div class="d-flex flex-grow-1 justify-content-between">
-      <div class="text-header-card">
-        <span class="title-text-header-card">Purchaser A</span> <br />
-        <span class="sub-text-header-card"> {{item?.updated_at|tanggal}} </span>
-      </div>
-      <div class="text-header-card left-margin">
-        <span class="title-text-header-card-2">Ongkos Kirim</span><br />
-        <span class="sub-text-header-card">{{item?.shipping_cost}}</span>
-      </div>
-      <div class="text-header-card-2">
-        <span class="title-text-header-card-2">Harga Belanja</span> <br />
-        <span class="sub-text-header-card">{{item?.sell_price|rupiah}}</span>
-      </div>
-    </div>
-  </div>
-  <div class="white-rounded-corner-item-list-cart">
-    <div class="d-flex align-items-center">
-      <item-card [item]="item"
-        [redirlink]="false">
-      </item-card>
-    </div>
-  </div>
-  <wsv wide="24px"></wsv>
+	*ngFor="let item of items">
+	<div class="grey-rounded-corner-header-card">
+		<div class="d-flex flex-grow-1 justify-content-between">
+			<div class="text-header-card">
+				<span class="title-text-header-card">Purchaser A</span> <br />
+				<span class="sub-text-header-card"> {{item?.updated_at|tanggal}} </span>
+			</div>
+			<div class="text-header-card left-margin">
+				<span class="title-text-header-card-2">Ongkos Kirim</span><br />
+				<span class="sub-text-header-card">{{item?.shipping_cost|rupiah}}</span>
+			</div>
+			<div class="text-header-card-2">
+				<span class="title-text-header-card-2">Harga Belanja</span> <br />
+				<span class="sub-text-header-card">{{item?.sell_price|rupiah}}</span>
+			</div>
+		</div>
+	</div>
+	<div class="white-rounded-corner-item-list-cart">
+		<div class="d-flex align-items-center">
+			<item-card [item]="item"
+				[redirlink]="false">
+			</item-card>
+		</div>
+	</div>
+	<wsv wide="24px"></wsv>
 </div>
