--- a/src/app/modules/approval/pages/approval-layout/approval-layout.component.html
+++ b/src/app/modules/approval/pages/approval-layout/approval-layout.component.html
@@ -3,15 +3,13 @@
 
 		<div id="top-fixed"
 			class="bg-10">
-
-			<!-- <div id="keranjang-label">APPROVAL</div> -->
-			<wsv wide="7px"></wsv>
+			<div id="keranjang-label">APPROVAL</div>
 			<div class="d-flex justify-content-center">
 				<item-summary-dropdown [list]="listApprovals"
 					(onSelect)="handleSelectAddress($event)"
 					[selected]='selected'></item-summary-dropdown>
 			</div>
-			<wsv wide="19px"></wsv>
+			<wsv wide="7px"></wsv>
 			<section class="d-flex justify-content-around list-with-scroll">
 
 				<div class="list"
@@ -45,9 +43,8 @@
 
 			</section>
 
-			<wsv wide="10px"></wsv>
-			<div id="horizontal-line"></div>
-			<wsv wide="20px"></wsv>
+			<!-- <div id="horizontal-line"></div> -->
+			<wsv wide="5px"></wsv>
 
 			<div class="d-flex align-items-center">
 				<div class="flex-grow-1 d-flex ">
