--- a/src/app/modules/cart2/pages/cart-layout/cart-layout.component.html
+++ b/src/app/modules/cart2/pages/cart-layout/cart-layout.component.html
@@ -20,7 +20,7 @@
 					</address-section>
 					<wsv wide="20px"></wsv>
 					<pilih-semua (onPilihSemuaCheckboxClick)="pilihSemuaClickEvent($event)"></pilih-semua>
-					<wsv wide="10px"></wsv>
+					<wsh wide="10px"></wsh>
 				</div>
 				<wsv wide="180px"></wsv>
 				<div style="overflow:scroll; ">
@@ -30,6 +30,7 @@
 						<wsv wide="40px"></wsv>
 					</div>
 				</div>
+				<wsh wide="20px"></wsh>
 			</div>
 
 			<div id="right-container">
