--- a/src/app/modules/approval2/pages/approval-layout/approval-layout.component.html
+++ b/src/app/modules/approval2/pages/approval-layout/approval-layout.component.html
@@ -60,7 +60,8 @@
 					<div>{{numberOfItemsSelected()}} Barang Dipilih</div>
 				</div>
 				<div *ngFor="let item of items">
-					<item-card [item]="item"></item-card>
+					<item-card [item]="item"
+						(onReject)="rejectItem()"></item-card>
 					<wsv wide="40px"></wsv>
 				</div>
 			</div>
