--- a/src/app/modules/approval2/components/approval-confirmation-dialog/approval-confirmation-dialog.component.html
+++ b/src/app/modules/approval2/components/approval-confirmation-dialog/approval-confirmation-dialog.component.html
@@ -1,5 +1,5 @@
 <div id="popup-wording">
-	<p>10 barang akan diproses, 3 out of stok. Proses Barang yang tersedia?</p>
+	<p>{{nItems()}} barang akan diproses. Proses Barang yang tersedia?</p>
 </div>
 <div id="popup-option">
 	<div id="popup-option-button">
