--- a/src/app/modules/approval2/components/item-card/item-card.component.html
+++ b/src/app/modules/approval2/components/item-card/item-card.component.html
@@ -32,7 +32,7 @@
 
 			<div id="tolak-button"
 				class="container-29 d-flex flex-grow-1 flex-row-reverse align-items-end">
-				<div (click)="tolakItem(dangerTpl, item)">Tolak</div>
+				<div (click)="tolakItem(item)">Tolak</div>
 			</div>
 
 
