--- a/src/app/modules/account/pages/account-dashboard/account-dashboard.component.html
+++ b/src/app/modules/account/pages/account-dashboard/account-dashboard.component.html
@@ -1,21 +1,23 @@
 <wsv wide="28px"></wsv>
 <div class="d-flex justify-content-between">
-	<div class="label-title">
-		Dashboard
-	</div>
-	<div class="d-flex"
-		id="filter-wrapper">
-		<date-dropdown class="flex-even"></date-dropdown>
-		<wsh wide="24px"></wsh>
-		<filter-dropdown-list class="flex-even"></filter-dropdown-list>
-	</div>
+  <div class="label-title">
+    Dashboard
+  </div>
+  <div class="d-flex"
+    id="filter-wrapper">
+    <date-dropdown class="flex-even"></date-dropdown>
+    <wsh wide="24px"></wsh>
+    <filter-dropdown-list class="flex-even"></filter-dropdown-list>
+  </div>
 </div>
 
-<div id="chartContainer"
+<output-graph></output-graph>
+
+<!-- <div id="chartContainer"
 	style="height: 370px; width: 100%;"></div>
 
 <div id="chartContainer2"
 	style="height: 370px; width: 100%;"></div>
 
 <div id="chartContainer3"
-	style="height: 370px; width: 100%;"></div>
+	style="height: 370px; width: 100%;"></div> -->
