--- a/src/app/modules/account/pages/account-dashboard/account-dashboard.component.scss
+++ b/src/app/modules/account/pages/account-dashboard/account-dashboard.component.scss
@@ -12,5 +12,28 @@
 }
 
 #filter-wrapper {
-	width: 500px;
+  width: 500px;
+  height: 100%;
+}
+
+#main-head{
+  background-color: cornflowerblue;
+  text-align: center;
+}
+
+.highcharts-legend-item rect {
+  visibility: hidden;
+}
+
+.xLegendSymbol {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  border: 3px solid;
+  border-radius: 50px;
+  height: 40px;
+  width: 40px;
+  margin-right: 10px;
+  margin-bottom: 10px;
+  font-size: 11px;
 }
