--- a/src/app/modules/account/components-tagihan/tagihan-table/tagihan-table.component.html
+++ b/src/app/modules/account/components-tagihan/tagihan-table/tagihan-table.component.html
@@ -23,18 +23,18 @@
 					</div>
 
 				</th>
-				<th>
+				<!-- <th>
 					<div>
 						<div class="d-flex justify-content-center">
 							Tanggal Jatuh Tempo
 						</div>
 						<wsv wide="9px"></wsv>
-						<horizontal-line></horizontal-line>
+						<horizontal-line></horizontal-line> 
 					</div>
-				</th>
+				</th> -->
 				<th>
 					<div>
-						<div class="d-flex justify-content-center">
+						<div class="d-flex justify-content-center text-left">
 							Status Pembayaran
 						</div>
 						<wsv wide="9px"></wsv>
@@ -45,29 +45,11 @@
 			</tr>
 		</thead>
 		<tbody>
-			<tr>
-				<td class="underline">SEN-20080300005</td>
-				<td>18/07/20</td>
-				<td>18 Agustus 2020</td>
-				<td>RELEASE</td>
-			</tr>
-			<tr>
-				<td class="underline">SEN-20080300005</td>
-				<td>18/07/20</td>
-				<td>18 Agustus 2020</td>
-				<td>RELEASE</td>
-			</tr>
-			<tr>
-				<td class="underline">SEN-20080300005</td>
-				<td>18/07/20</td>
-				<td>18 Agustus 2020</td>
-				<td>RELEASE</td>
-			</tr>
-			<tr>
-				<td class="underline">SEN-20080300005</td>
-				<td>18/07/20</td>
-				<td>18 Agustus 2020</td>
-				<td>RELEASE</td>
+			<tr *ngFor="let items of tagihanHist; let i = index">
+				<td class="text-center">{{items?.invoice_no}}</td>
+				<td class="text-center">{{items.released_at | tanggal: 'dmy'}}</td>
+				<!-- <td class="text-right">{{items.mutation | number}}</td> -->
+				<td class="text-center">{{items.invoice_status}}</td>
 			</tr>
 
 		</tbody>
