--- a/src/app/modules/account/components-tagihan/tagihan-table/tagihan-table.component.scss
+++ b/src/app/modules/account/components-tagihan/tagihan-table/tagihan-table.component.scss
@@ -22,3 +22,20 @@ td {
 .underline {
 	text-decoration: underline;
 }
+
+
+.text-center{
+	text-align:center;
+}
+
+.text-right{
+	text-align:right;
+}
+
+.text-left{
+	text-align:left;
+}
+
+.tebal{
+	font-weight: bold;
+}
