--- a/src/app/modules/account/pages/account-info-personal/account-info-personal.component.html
+++ b/src/app/modules/account/pages/account-info-personal/account-info-personal.component.html
@@ -20,7 +20,7 @@
 		<wsv wide="40px"></wsv>
 
 		<red-button *ngIf="isEditting"
-			(click)="save()"
+			(click)="save(this.firstname.value,this.lastname.value)"
 			label="Simpan"
 			font="14px"
 			paddingtop="10px"
