set-utama button

--- a/src/app/modules/account/pages/account-layout/account-layout.component.html
+++ b/src/app/modules/account/pages/account-layout/account-layout.component.html
@@ -1,30 +1,32 @@
-<div id="account-layout"
-	class="container d-flex">
-	<div id="left-wrapper">
-		<wsv wide="24px"></wsv>
-		<div class="d-flex justify-content-center">
-			<img id="logo-akun"
-				src="{{datauser?.profile_picture_url}}">
-		</div>
+<block-ui>
+  <div id="account-layout"
+    class="container d-flex">
+    <div id="left-wrapper">
+      <wsv wide="24px"></wsv>
+      <div class="d-flex justify-content-center">
+        <img id="logo-akun"
+          src="{{datauser?.profile_picture_url}}">
+      </div>
 
-		<wsv wide="18px"></wsv>
-		<div class="d-flex justify-content-center">
-			<div id="position-label">{{datauser?.role_name}}</div>
-		</div>
-		<wsv wide="18px"></wsv>
-		<div class="d-flex justify-content-center">
-			<div id="name-label">{{datauser?.fullname}}</div>
-		</div>
-		<wsv wide="39px"></wsv>
-		<div class="d-flex">
-			<wsh wide="35px"></wsh>
-			<account-navigation-bar></account-navigation-bar>
-			<wsh wide="29px"></wsh>
-		</div>
-	</div>
+      <wsv wide="18px"></wsv>
+      <div class="d-flex justify-content-center">
+        <div id="position-label">{{datauser?.role_name}}</div>
+      </div>
+      <wsv wide="18px"></wsv>
+      <div class="d-flex justify-content-center">
+        <div id="name-label">{{datauser?.fullname}}</div>
+      </div>
+      <wsv wide="39px"></wsv>
+      <div class="d-flex">
+        <wsh wide="35px"></wsh>
+        <account-navigation-bar></account-navigation-bar>
+        <wsh wide="29px"></wsh>
+      </div>
+    </div>
 
-	<div id="right-wrapper"
-		class="flex-grow-1">
-		<router-outlet></router-outlet>
-	</div>
-</div>
+    <div id="right-wrapper"
+      class="flex-grow-1">
+      <router-outlet></router-outlet>
+    </div>
+  </div>
+</block-ui>
