--- a/src/app/modules/account/components/info-personal-row/info-personal-row.component.html
+++ b/src/app/modules/account/components/info-personal-row/info-personal-row.component.html
@@ -4,12 +4,15 @@
 		id="content-info-personal">{{content}}</div>
 	<input *ngIf="isEditting"
 		type="text"
-		id="input-text-personal-row"
+		id="input-text-personal-row-{{ids}}"
 		[(ngModel)]="content"
-		class="textbox-search">
+		class="textbox-search"
+		(keyup)="mbel(this,ids)">
 </div>
 <wsv wide="18px"></wsv>
 <div *ngIf="isEditting"
 	class="horizontal-line"></div>
+
+
 <div *ngIf="!isEditting"
 	class="transaparent-horizontal-line"></div>
