--- a/src/app/modules/home/pages/home-layout/home-layout.component.html
+++ b/src/app/modules/home/pages/home-layout/home-layout.component.html
@@ -1,20 +1,22 @@
-<div class="home-container container">
-	<address-section borderRadius='20px'></address-section>
-	<div class="white-space"></div>
-	<banner-section hidden></banner-section>
-
-
-	<div *ngFor="let row of productCatalogRows">
+<block-ui>
+	<div class="home-container container">
+		<address-section borderRadius='20px'></address-section>
 		<div class="white-space"></div>
-		<catalog-section [products]="row"></catalog-section>
+		<banner-section hidden></banner-section>
+
+
+		<div *ngFor="let row of productCatalogRows">
+			<div class="white-space"></div>
+			<catalog-section [products]="row"></catalog-section>
+		</div>
+
+		<br />
+
 	</div>
 
-	<br />
+	<div class="footer">
+		<footer-bar></footer-bar>
+		<footer></footer>
 
-</div>
-
-<div class="footer">
-	<footer-bar></footer-bar>
-	<footer></footer>
-
-</div>
+	</div>
+</block-ui>
