--- a/src/app/modules/transaction/components/item-transaction/item-transaction.component.html
+++ b/src/app/modules/transaction/components/item-transaction/item-transaction.component.html
@@ -5,10 +5,10 @@
 		<wsh wide="20px"></wsh>
 		<div class="col-1-trx-item">
 			<div class="title-1">
-				{{item.request_full_name}}
+				{{item.requester_full_name}}
 			</div>
 			<div class="title-2">
-				{{item.partner_sku_item}}
+				{{item.id}}
 			</div>
 		</div>
 
