component trash can dialog

--- a/src/app/modules/account/pages/account-info-perusahaan/account-info-perusahaan.component.html
+++ b/src/app/modules/account/pages/account-info-perusahaan/account-info-perusahaan.component.html
@@ -18,5 +18,6 @@
   <info-perusahaan-address-card [index]="i"
     [address]="address"
     (editEvent)="editAddress(address)"
+    (deleteEvent)="deleteAddress(address)"
     (setUtamaEvent)="setUtamaAddress(address)"></info-perusahaan-address-card>
 </div>
