--- a/src/app/modules/account/components/info-perusahaan-address-card/info-perusahaan-address-card.component.html
+++ b/src/app/modules/account/components/info-perusahaan-address-card/info-perusahaan-address-card.component.html
@@ -17,7 +17,7 @@
     </div>
   </div>
   <div class="d-flex">
-    <trash-can></trash-can>
+    <trash-can (click)="deleteInfo()"></trash-can>
     <wsh wide="16px"></wsh>
     <edit (click)="edit()"></edit>
     <wsh wide="16px"></wsh>
