--- a/src/app/layout/components/login-card/login-card.component.html
+++ b/src/app/layout/components/login-card/login-card.component.html
@@ -40,24 +40,26 @@
 					<div class="p-2 bd-highlight warning">
 						{{errlogin}}
 					</div>
+
+
+
+
+
 				</form>
 			</mat-step>
 
 
 			<mat-step [stepControl]="secondFormGroup">
 				<form [formGroup]="secondFormGroup">
-
 					<div class="p-2 bd-highlight teks"><img src="../../../../assets/image/icons/login-otp.svg"></div>
-					<wsv wide="10px"></wsv>
 					<div class="p-2 bd-highlight teksbesar">Verifikasi OTP</div>
-					<wsv wide="15px"></wsv>
 					<div class="p-2 bd-highlight teks">Masukkan Nomor OTP yang sudah dikirim ke <b>{{emailnya}}</b>
 					</div>
-					<wsv wide="20px"></wsv>
 					<div class="p-2 bd-highlight teks">
 
 
 						<ng-otp-input (onInputChange)="onOtpChange($event,emailnya)"
+							#ngOtpInput
 							[config]="{length:6}"></ng-otp-input>
 
 
@@ -106,6 +108,7 @@
 					<div class="p-2 bd-highlight warning">
 						{{errotp}}
 					</div>
+
 				</form>
 			</mat-step>
 
@@ -113,32 +116,3 @@
 	</block-ui>
 
 </div>
-
-
-<!--
-<div class="d-flex flex-column bd-highlight mb-3">
-	<div class="p-2 bd-highlight login-card">
-	<mat-card>
-		Masukkan Alamat Email Anda
-
-		<form [formGroup]="loginForm">
-			<div class="d-flex">
-				<div class="logo mx-auto mt-5">
-					<div class="input-group mb-3">
-
-					</div>
-
-					<div class="input-group mb-3">
-
-					</div>
-				</div>
-
-			</div>
-		</form>
-	</mat-card>
-</div>
-
-	<div class="p-2 bd-highlight">
-
-	</div>
-</div> -->
