--- a/src/app/modules/approval2/pages/approval-layout/approval-layout.component.scss
+++ b/src/app/modules/approval2/pages/approval-layout/approval-layout.component.scss
@@ -8,3 +8,108 @@
 	color: $abu-abu-gelap;
 	margin-top: 9px;
 }
+
+#left-container {
+	position: relative;
+	width: 1100px;
+}
+
+#top-fixed {
+	position: fixed;
+	width: 1100px;
+	background-color: $main-background;
+	z-index: 1;
+}
+
+#right-fixed {
+	position: fixed;
+}
+#right-container {
+	position: absolute;
+	margin-left:20px;
+	top:110px;
+	left:1110px;
+}
+
+.bg-10 {
+	background-color: $abu-abu-2;
+	width: 100%;
+	z-index: 600;
+}
+#asd {
+	overflow: hidden;
+	/*overflow-y: scroll;*/
+}
+
+#keranjang-label {
+	font-family: $primary-font;
+	font-weight: bold;
+	font-size: 24px;
+	color: $abu-abu-gelap;
+	margin-top: 25px;
+}
+
+#scrollable-div {
+	position: relative;
+	width: 62%;
+	margin-top: 220px;
+	border: solid yellowgreen 0px;
+	overflow-y: scroll;
+}
+
+#pilihsemua{
+	font-family: $primary-font;
+	font-style: normal;
+	font-weight: bold;
+	font-size: 14px;
+	line-height: 19px;
+	color: $color-primary;
+	padding-left:15px;
+}
+
+#terpilih{
+	margin-left:550px;
+	font-family: $primary-font;
+	font-style: normal;
+	font-weight: bold;
+	font-size: 14px;
+	line-height: 19px;
+	color: $color-primary;
+}
+
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+#scrollable-div::-webkit-scrollbar {
+	display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+#scrollable-div {
+	-ms-overflow-style: none; /* IE and Edge */
+	scrollbar-width: none; /* Firefox */
+}
+
+#div-cart-price {
+	position: fixed;
+	border: solid blueviolet 0px;
+	top: 300px;
+	right: 0px;
+	height: 800px;
+	padding-bottom: 300px;
+}
+
+#div-top-address {
+	position: fixed;
+	width: 100%;
+	z-index: 9999;
+	top: 80px;
+	z-index: 1000;
+	background-color: #e5e5e5;
+}
+
+#horizontal-line {
+	height: 0.5px;
+	width: 100%;
+	background-color: #a9a9a9;
+	opacity: 0.6;
+}
