Revisi Purchaser Name Still Using Hardcode

--- a/src/app/modules/detail-product/components/breadcrumb/breadcrumb.component.html
+++ b/src/app/modules/detail-product/components/breadcrumb/breadcrumb.component.html
@@ -1,7 +1,7 @@
 <div id="breadcrumb-nest"
 	class="d-flex">
 	<div class="breadcrumb-link"
-		[routerLink]="['../']">Home</div>
+		[routerLink]="['../../']">Home</div>
 	<img src="../../../../../assets/image/icons/arrow.svg"
 		class="arrow-breadcrumb">
 	<div class="breadcrumb-link"
