Revisi: Hover Tolak Is Not Appropriate

--- a/src/app/modules/approval2/components/item-card/item-card.component.html
+++ b/src/app/modules/approval2/components/item-card/item-card.component.html
@@ -32,7 +32,8 @@
 
 			<div id="tolak-button"
 				class="container-29 d-flex flex-grow-1 flex-row-reverse align-items-end">
-				<div (click)="tolakItem(item)">Tolak</div>
+				<div (click)="tolakItem(item)"
+					class="tolak">Tolak</div>
 			</div>
 
 
@@ -58,7 +59,8 @@
 				<wsv wide="9px"></wsv>
 				<div id="tolak-button"
 					class="d-flex flex-row-reverse">
-					<div (click)="tolakItem(item)">Tolak</div>
+					<div (click)="tolakItem(item)"
+						class="tolak">Tolak</div>
 				</div>
 			</div>
 		</div>
