--- a/src/app/modules/approval2/pages/approval-layout/approval-layout.component.scss
+++ b/src/app/modules/approval2/pages/approval-layout/approval-layout.component.scss
@@ -1,44 +1,11 @@
 @import '../../../../../styles/variables/colors';
 @import '../../../../../styles/variables/fonts';
 
-#label1 {
-	font-family: $primary-font;
-	font-weight: bold;
-	font-size: 24px;
-	color: $abu-abu-gelap;
-	margin-top: 9px;
-}
-
-#left-container {
-	position: relative;
-	width: 1100px;
-}
-
 #top-fixed {
 	position: fixed;
-	width: 1100px;
+	width: 1366px;
 	background-color: $main-background;
 	z-index: 1;
-}
-
-#right-fixed {
-	position: fixed;
-}
-#right-container {
-	position: absolute;
-	margin-left:20px;
-	top:110px;
-	left:1110px;
-}
-
-.bg-10 {
-	background-color: $abu-abu-2;
-	width: 100%;
-	z-index: 600;
-}
-#asd {
-	overflow: hidden;
-	/*overflow-y: scroll;*/
 }
 
 #keranjang-label {
@@ -49,26 +16,18 @@
 	margin-top: 25px;
 }
 
-#scrollable-div {
-	position: relative;
-	width: 62%;
-	margin-top: 220px;
-	border: solid yellowgreen 0px;
-	overflow-y: scroll;
-}
-
-#pilihsemua{
+#pilihsemua {
 	font-family: $primary-font;
 	font-style: normal;
 	font-weight: bold;
 	font-size: 14px;
 	line-height: 19px;
 	color: $color-primary;
-	padding-left:15px;
+	padding-left: 15px;
 }
 
-#terpilih{
-	margin-left:550px;
+#terpilih {
+	margin-left: 550px;
 	font-family: $primary-font;
 	font-style: normal;
 	font-weight: bold;
@@ -77,9 +36,19 @@
 	color: $color-primary;
 }
 
+#left-container {
+	overflow: scroll;
+}
 
+#right-container {
+	overflow: scroll;
+}
 /* Hide scrollbar for Chrome, Safari and Opera */
-#scrollable-div::-webkit-scrollbar {
+#left-container::-webkit-scrollbar {
+	display: none;
+}
+
+#right-container::-webkit-scrollbar {
 	display: none;
 }
 
